--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -183,6 +183,7 @@
     <Content Include="inc\GRIS0004RightBox.ascx" />
     <Content Include="inc\GRIS0005LeftBox.ascx" />
     <Content Include="M00000LOGON.aspx" />
+    <Content Include="OIL\inc\OIM0020WRKINC.ascx" />
     <Content Include="OIL\loc\OIT0005TankLocDetail.aspx" />
     <Content Include="OIL\inc\OIT0005WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0004WRKINC.ascx" />
@@ -208,6 +209,9 @@
     <Content Include="OIL\mas\OIM0004StationList.aspx" />
     <Content Include="OIL\mas\OIM0005TankSearch.aspx" />
     <Content Include="OIL\mas\OIM0004StationSearch.aspx" />
+    <Content Include="OIL\mas\OIM0020GuidanceCreate.aspx" />
+    <Content Include="OIL\mas\OIM0020GuidanceList.aspx" />
+    <Content Include="OIL\mas\OIM0020GuidanceSearch.aspx" />
     <Content Include="OIL\mas\OIS0001UserCreate.aspx" />
     <Content Include="OIL\mas\OIS0001UserList.aspx" />
     <Content Include="OIL\mas\OIS0001UserSearch.aspx" />
@@ -348,6 +352,13 @@
       <DependentUpon>GRM00002WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="OIL\inc\OIM0020WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0020WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0020WRKINC.ascx.vb">
+      <DependentUpon>OIM0020WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\loc\OIT0005TankLocDetail.aspx.designer.vb">
       <DependentUpon>OIT0005TankLocDetail.aspx</DependentUpon>
     </Compile>
@@ -458,6 +469,27 @@
     </Compile>
     <Compile Include="OIL\inv\OIT0004OilStockSearch.aspx.vb">
       <DependentUpon>OIT0004OilStockSearch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0020GuidanceCreate.aspx.designer.vb">
+      <DependentUpon>OIM0020GuidanceCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0020GuidanceCreate.aspx.vb">
+      <DependentUpon>OIM0020GuidanceCreate.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0020GuidanceList.aspx.designer.vb">
+      <DependentUpon>OIM0020GuidanceList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0020GuidanceList.aspx.vb">
+      <DependentUpon>OIM0020GuidanceList.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0020GuidanceSearch.aspx.designer.vb">
+      <DependentUpon>OIM0020GuidanceSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0020GuidanceSearch.aspx.vb">
+      <DependentUpon>OIM0020GuidanceSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\mas\OIS0001UserCreate.aspx.designer.vb">
