--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -103,6 +103,9 @@
     <Content Include="img\oillogo.png" />
     <Content Include="img\right.png" />
     <Content Include="img\tank2.png" />
+    <Content Include="OIL\css\OIM0020C.css" />
+    <Content Include="OIL\css\OIM0020L.css" />
+    <Content Include="OIL\css\OIM0020S.css" />
     <Content Include="OIL\css\OIT0006D.css" />
     <Content Include="OIL\css\OIT0006L.css" />
     <Content Include="OIL\css\OIT0005C.css" />
@@ -210,6 +213,7 @@
     <Content Include="OIL\mas\OIM0005TankSearch.aspx" />
     <Content Include="OIL\mas\OIM0004StationSearch.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceCreate.aspx" />
+    <Content Include="OIL\mas\OIM0020GuidanceDownload.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceList.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceSearch.aspx" />
     <Content Include="OIL\mas\OIS0001UserCreate.aspx" />
@@ -226,6 +230,9 @@
     <Content Include="OIL\ord\OIT0003OrderLinkQuota.aspx" />
     <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
+    <Content Include="OIL\script\OIM0020C.js" />
+    <Content Include="OIL\script\OIM0020L.js" />
+    <Content Include="OIL\script\OIM0020S.js" />
     <Content Include="OIL\script\OIT0003B.js" />
     <Content Include="OIL\script\OIT0005D.js" />
     <Content Include="OIL\script\OIT0006D.js" />
@@ -476,6 +483,13 @@
     </Compile>
     <Compile Include="OIL\mas\OIM0020GuidanceCreate.aspx.vb">
       <DependentUpon>OIM0020GuidanceCreate.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0020GuidanceDownload.aspx.designer.vb">
+      <DependentUpon>OIM0020GuidanceDownload.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0020GuidanceDownload.aspx.vb">
+      <DependentUpon>OIM0020GuidanceDownload.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\mas\OIM0020GuidanceList.aspx.designer.vb">
