--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -104,8 +104,11 @@
     <Content Include="img\right.png" />
     <Content Include="img\tank2.png" />
     <Content Include="OIL\css\M00002.css" />
+    <Content Include="OIL\css\OIM0003C.css" />
     <Content Include="OIL\css\OIM0002C.css" />
+    <Content Include="OIL\css\OIM0003L.css" />
     <Content Include="OIL\css\OIM0002L.css" />
+    <Content Include="OIL\css\OIM0003S.css" />
     <Content Include="OIL\css\OIM0002S.css" />
     <Content Include="OIL\css\OIM0020C.css" />
     <Content Include="OIL\css\OIM0020L.css" />
@@ -191,6 +194,10 @@
     <Content Include="inc\GRIS0004RightBox.ascx" />
     <Content Include="inc\GRIS0005LeftBox.ascx" />
     <Content Include="M00000LOGON.aspx" />
+    <Content Include="OIL\inc\OIM0002C.css" />
+    <Content Include="OIL\inc\OIM0002L.css" />
+    <Content Include="OIL\inc\OIM0002S.css" />
+    <Content Include="OIL\inc\OIM0003WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0002WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0020WRKINC.ascx" />
     <Content Include="OIL\loc\OIT0005TankLocDetail.aspx" />
@@ -214,6 +221,7 @@
     <Content Include="OIL\M00002MENU.aspx" />
     <Content Include="OIL\mas\OIM0002OrgCreate.aspx" />
     <Content Include="OIL\mas\OIM0002OrgList.aspx" />
+    <Content Include="OIL\mas\OIM0003ProductSearch.aspx" />
     <Content Include="OIL\mas\OIM0004StationCreate.aspx" />
     <Content Include="OIL\mas\OIM0002OrgSearch.aspx" />
     <Content Include="OIL\mas\OIM0005TankCreate.aspx" />
@@ -239,8 +247,11 @@
     <Content Include="OIL\ord\OIT0003OrderLinkQuota.aspx" />
     <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
+    <Content Include="OIL\script\OIM0003C.js" />
     <Content Include="OIL\script\OIM0002C.js" />
+    <Content Include="OIL\script\OIM0003L.js" />
     <Content Include="OIL\script\OIM0002L.js" />
+    <Content Include="OIL\script\OIM0003S .js" />
     <Content Include="OIL\script\OIM0002S.js" />
     <Content Include="OIL\script\OIM0020C.js" />
     <Content Include="OIL\script\OIM0020L.js" />
@@ -372,6 +383,13 @@
     </Compile>
     <Compile Include="OIL\inc\GRM00002WRKINC.ascx.vb">
       <DependentUpon>GRM00002WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0003WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0003WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0003WRKINC.ascx.vb">
+      <DependentUpon>OIM0003WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\inc\OIM0002WRKINC.ascx.designer.vb">
@@ -516,6 +534,13 @@
     <Compile Include="OIL\mas\OIM0002OrgList.aspx.vb">
       <DependentUpon>OIM0002OrgList.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0003ProductSearch.aspx.designer.vb">
+      <DependentUpon>OIM0003ProductSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0003ProductSearch.aspx.vb">
+      <DependentUpon>OIM0003ProductSearch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\mas\OIM0002OrgSearch.aspx.designer.vb">
       <DependentUpon>OIM0002OrgSearch.aspx</DependentUpon>
